# positioning

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  NOTE  README  README.md  README.md.orig  ReleaseNotes  build-all.sh  positioning_1.0.bb  run-test.sh
api/franca/: .gitignore  CMakeLists.txt
api/franca/enhancedpositionservice/: CMakeLists.txt  Configuration.fidl  EnhancedPosition.fidl  EnhancedPositionServiceTypes.fidl  PositionFeedback.fidl
api/franca/gnssservice/: CMakeLists.txt  GnssService.fidl  GnssServiceConfiguration.fidl  GnssServiceTypes.fidl
api/franca/sensorsservice/: Acceleration.fidl  AccelerationConfiguration.fidl  CMakeLists.txt  Gyroscope.fidl  GyroscopeConfiguration.fidl  MetaData.fidl  Odometer.fidl  ReverseGear.fidl  SensorsServiceTypes.fidl  VehicleSpeed.fidl  Wheel.fidl  WheelConfiguration.fidl
enhanced-position-service/: .gitignore  CMakeLists.txt  FindDLT.cmake  README
enhanced-position-service/api/: .gitignore  CMakeLists.txt  constants.xsl  enum.xsl  genivi-positioning-configuration.xml  genivi-positioning-constants.xml  genivi-positioning-enhancedposition.xml  genivi-positioning-positionfeedback.xml
enhanced-position-service/api/franca/: CommonTypes.fidl  Configuration.fidl  EnhancedPosition.fidl  EnhancedPositionServiceTypes.fidl  EnhancedPositionTypes.fidl  PositionFeedback.fidl  README
enhanced-position-service/commonapi-service/: CMakeLists.txt
enhanced-position-service/commonapi-service/api/: Configuration.fidl  EnhancedPosition.fidl  EnhancedPositionServiceTypes.fidl  PositionFeedback.fidl  README
enhanced-position-service/commonapi-service/src/: ConfigurationStubImpl.cpp  ConfigurationStubImpl.h  EnhancedPositionClient.cpp  EnhancedPositionService.cpp  EnhancedPositionStubImpl.cpp  EnhancedPositionStubImpl.h  PositionFeedbackStubImpl.cpp  PositionFeedbackStubImpl.h
enhanced-position-service/dbus/: CMakeLists.txt  FindDLT.cmake  README
enhanced-position-service/dbus-service/: CMakeLists.txt
enhanced-position-service/dbus-service/api/: enum.xsl  introspect.xsd  introspect.xsl
enhanced-position-service/dbus-service/src/: configuration.cpp  position-feedback.h
enhanced-position-service/dbus/api/: CMakeLists.txt  README  genivi-positioning-configuration.xml  genivi-positioning-constants.xml  genivi-positioning-enhancedposition.xml  genivi-positioning-positionfeedback.xml
enhanced-position-service/dbus/src/: CMakeLists.txt  configuration.cpp  configuration.h  enhanced-position-service.service  enhanced-position.cpp  enhanced-position.h  log.h  main.cpp  position-feedback.h
enhanced-position-service/dbus/test/: CMakeLists.txt  enhanced-position-client.cpp  enhanced-position-client.h
enhanced-position-service/doc/: 01_context.dox  01b_architecture.dox  01c_requirements.dox  02a_api_enhpos.dox  03_sequences.dox  Doxyfile  build-and-view.sh  testplan.txt
enhanced-position-service/doc/apidoc/: concatpdf.sh  generatedoc.sh  genivi-positioning-constants.xml  html2pdf.sh  xml2html.sh
enhanced-position-service/doc/examples/: git-clone.txt
enhanced-position-service/doc/tex/: doxygen.sty  header.tex
enhanced-position-service/doc/tools/: GENIVI_EnhancedPositionService_ComponentSpecification-part1.docx  README.txt  generate-doc.sh
enhanced-position-service/franca/: CMakeLists.txt  FindDLT.cmake
enhanced-position-service/franca/api/: CMakeLists.txt  (+6 more)
enhanced-position-service/scripts/: StartHelperGeneric.py  gen-dbus-conf.sh  gen-dbus.sh  genivi-positioning-configuration-qt.xml  genivi-positioning-enhancedposition-qt.xml  run-test.py  strip-annotations.sh
enhanced-position-service/src/: .gitignore  CMakeLists.txt  ConfigurationImpl.cpp  ConfigurationImpl.h  PositionFilter.cpp  PositionFilter.h  clienthandler.h  confifadaptor.cpp  confifadaptor.h  configuration.cpp  configuration.h  demoifadaptor.cpp  demoifadaptor.h  enhanced-position.cpp  enhanced-position.h  genivi-dbus-types.h  genivi-navigationcore-enum.h  genivi-version.cpp  genivi-version.h  main.cpp  position-feedback.cpp  position-feedback.h  serverimpl.cpp  serverimpl.h
enhanced-position-service/test/: CMakeLists.txt  ConfigurationClient.cpp  ConfigurationClient.h  agentadaptor.cpp  agentadaptor.h  agentimpl.cpp  agentimpl.h  confif.cpp  confif.h  demoif.cpp  demoif.h  enhanced-position-client.cpp  enhanced-position-client.h  main-client.cpp  signalhelper.cpp  signalhelper.h  simple-client.py  testclient.cpp  testclient.h
gnss-service/: CMakeLists.txt
gnss-service/api/: gnss-ext.h  gnss-init.h  gnss-meta-data.h  gnss-simple.h  gnss-status.h  gnss.h
gnss-service/doc/: TestPlan.txt
gnss-service/src/: CMakeLists.txt  globals.h  gnss-ext.c  gnss-impl.c  gnss-meta-data.c  gnss-simple.c  gnss-use-gpsd.c  gnss-use-nmea.cpp  gnss-use-replayer.c  hnmea.cpp  hnmea.h  log.h
gnss-service/test/: CMakeLists.txt  gnss-service-client.c
log-replayer/: CMakeLists.txt  FindDLT.cmake  README
log-replayer/doc/: LogFileFormat.v4.00.doc  LogFileFormat.v5.00.doc  LogReplayerDataFormat.v2.00.doc  TestPlan.txt
log-replayer/logs/: CMakeLists.txt  logs_v1.7z
log-replayer/src/: CMakeLists.txt  log-replayer.c  log.h
log-replayer/test/: CMakeLists.txt  test-log-replayer.c
logger/: CMakeLists.txt  FindDLT.cmake  README
logger/inc/: poslog.h
logger/src/: CMakeLists.txt  poslog.cpp
logger/test/: CMakeLists.txt  gnsslog.cpp  gnsslog.h  log-gnss-sns.cpp  snslog.cpp  snslog.h  test-poslog.cpp
sensors-service/: CMakeLists.txt  FindDLT.cmake
sensors-service/api/: acceleration.h  gyroscope.h  inclination.h  odometer.h  reverse-gear.h  slip-angle.h  sns-init.h  sns-meta-data.h  sns-status.h  steering-angle.h  vehicle-data.h  vehicle-speed.h  vehicle-state.h  wheel.h
sensors-service/doc/: TestPlan.txt
sensors-service/src/: CMakeLists.txt  acceleration.c  globals.h  gyroscope.c  i2ccomm.cpp  i2ccomm.h  lsm9ds1.cpp  lsm9ds1.h  mpu6050.cpp  mpu6050.h  sns-meta-data.c  sns-use-iphone.c  sns-use-mpu6050.cpp  sns-use-replayer.c  sns-use-sensors.cpp  vehicle-data.c  vehicle-speed.c  wheeltick.c
sensors-service/test/: CMakeLists.txt  sensors-service-client.c
(+198 files in other folders)
